Bug 107720 - bound form control refresh() resets to default value when on insert row
Summary: bound form control refresh() resets to default value when on insert row
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-09 10:51 UTC by Lionel Elie Mamane
Modified: 2017-05-26 13:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2017-05-09 10:51:49 UTC
Description:
bound form control refresh() resets to default value when on insert row

Steps to Reproduce:
1. Consider a form bound to a database relation (table, query, view, ...)
2. Move to insert row
3. start to enter values to be inserted, don't do the insertion
4. consider a bound control (bug found on listbox, probably all other controls), bound to a field where a value different than the control's default value has been entered
5. call that control's refresh() method

Actual Results:  
the control's value becomes the control's default value

Expected Results:
the control's value should stay the value entered


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Commit Notification 2017-05-09 11:20:11 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24e05b48cb7ceb67c2566bbb212cbc1d752bb59e

tdf#107720 Bound Control initFromField: consider the case of the insert row

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2017-05-26 13:40:24 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb50f9d66540a87065f30da8fd8cadde8e730704&h=libreoffice-5-3

tdf#107720 Bound Control initFromField: consider the case of the insert row

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.