tdf#107720 Bound Control initFromField: consider the case of the insert row

Change-Id: If18e161c994c926fd86453ab5736df1e89bb61de